container/manifest/sync/svc-mo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mo
spec:
  selector:
    app: app-mo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
