container/manifest/sync/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikus-origin-ingress
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: "mikusorigin.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-mo
            port:
              number: 80
